# vaultops

./: .ansible-lint  .dockerignore  .gitattributes  .gitignore  .isort.cfg  .pylintrc  .secrets.baseline  .yamllint  CHANGELOG.md  Cargo.toml  DEPLOYMENTS.md  PREREQUISITES.md  README.md  ansible.cfg  docker-compose.yml  homelab-inventory.yml  inventory.yml  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml  test.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/files/: package-lock.json  release.config.cjs  requirements-dev.txt  requirements.txt
.github/workflows/: ansible-lint.yml  bandit.yml  black.yml  gitleaks.yml  isort.yml  linting.yml  mypy.yml  pylint.yml  release.yml  scans.yml  terraform-fmt.yml
codifiedvault/: .terraform.lock.hcl  locals.tf  module.tf  provider.tf  variables.tf
codifiedvault/auth/: approle.tf  provider.tf
codifiedvault/kv2/: kv.tf  minio-kes.tf  secret.tf  vault-secrets.tf
codifiedvault/pki/: client_certificate.tf  master.tf  mount.tf  server_certificate.tf  variables.tf  vault_client_certificate.tf
codifiedvault/policy/: default_login.tf  deny.tf  github-arpanrec-arpanrec-nebula.tf  github-arpanrec-arpanrec-vaultops.tf  github-arpanrec-minio-install.tf  github-arpanrec-netcli.tf  github-arpanrec-vaultops.tf  github-master-controller.tf  github_master_controller.tf  gitlab-master-controller.tf  gitlab_master_controller.tf  minio-kes.tf  scm_cicd.tf
group_vars/: all.yml
misc/: vault_arch_map.py
plugins/inventory/: vault_inventory_builder.py
plugins/modules/: github_action_secret.py
pylib/vaultops/: __init__.py  __main__.py
pylib/vaultops/builder/: vault_config.py  vault_raft_node.py  vault_raft_node_hvac.py
pylib/vaultops/github_setup/: __init__.py  github.py  github_bot.py
pylib/vaultops/models/: backend.py  certificate.py  exit_hook.py  github_bot.py  github_prod.py  github_secrets.py  ha_client.py  pki_private_key.py  root_token.py  storage.py  vault_config.py  vault_node.py  vault_raft_node.py  vault_raft_node_hvac.py  vault_secrets.py  vault_server.py
pylib/vaultops/utils/: github_variable.py  hashicorp_tfe.py
pylib/vaultops/vault_setup/: __init__.py  admin_user.py  certificate.py  codifiedvault.py  external_services.py  find_ready.py  github.py  github_bot.py  ha_client.py  initialize.py  private_key.py  raft_node_hvac.py  raft_nodes_join.py  raft_snapshot.py  root_token.py  unseal.py  vault_pki_root_ca.py  vault_secrets.py
tasks/: beautify.yml  dr.yml  github.yml  install.yml  install_node.yml  patch.yml  retry_join_tls.yml
templates/: config.common.hcl.j2  config.listener.hcl.j2  config.storage.hcl.j2  vault-backup.service.j2  vault-backup.timmer.j2  vault.service.j2
