[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "vaultops"
version = "1.2.0"
description = "Install Hashicorp Vault"
authors = ["arpan <arpan.rec@gmail.com>"]
license = "GLWTS"
readme = "README.md"
package-mode = false
# packages = [{ include = "vaultops", from = "pylib" }]
# scripts = { "vaultops" = "vaultops.__main__:main" }

[tool.poetry.dependencies]
python = "^3.10"
ansible = "10.5.0"
pylib = {git = "git@github.com:arpanrec/pylib.git", rev = "develop"}

[tool.poetry.group.dev.dependencies]
pylint = "3.3.1"
black = "24.10.0"
isort = "5.13.2"
bandit = "1.7.10"
poetry-plugin-export = "1.8.0"
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
