[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pylint."FORMAT"]
max-line-length = 120
indent-string = '    '

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "vaultops"
version = "1.2.0"
description = "Install Hashicorp Vault"
authors = ["arpan <arpan.rec@gmail.com>"]
license = "GLWTS"
readme = "README.md"
package-mode = true
packages = [{ include = "vaultops", from = "pylib" }]
scripts = { "vaultops" = "vaultops.__main__:main" }

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ansible = ">=10.6.0,<11.0.0"
hvac = ">=2.3.0,<3.0.0"
passlib = ">=1.7.4,<2.0.0"
jmespath = ">=1.0.1,<2.0.0"
pydantic = ">=2.9.2,<3.0.0"
pydantic-settings = ">=2.6.1,<3.0.0"
prettytable = ">=3.12.0,<4.0.0"
python-terraform = ">=0.10.1,<1.0.0"
pygithub = ">=2.5.0,<3.0.0"
python-gnupg = ">=0.5.3,<1.0.0"
boto3 = ">=1.35.57,<2.0.0"
boto3-stubs = { extras = ["s3"], version = ">=1.35.57,<2.0.0" } # extras = ["all"]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.13.0,<2.0.0"
pylint = ">=3.3.1,<4.0.0"
ansible-lint = { version = ">=24.9.2,<25.0.0", markers = 'platform_system != "Windows"' }
poetry-plugin-export = ">=1.8.0,<2.0.0"
detect-secrets = ">=1.5.0,<2.0.0"
types-pyyaml = ">=6.0.12.20240917,<7.0.0"
types-requests = ">=2.32.0.20241016,<3.0.0"
types-jmespath = ">=1.0.2.20240106,<2.0.0"
ansible-dev-tools = ">=24.10.2,<25.0.0"
pyright = ">=1.1.388,<2.0.0"
isort = ">=5.13.2,<6.0.0"
bandit = { extras = ["toml"], version = ">=1.7.10,<2.0.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
