[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pylint."FORMAT"]
max-line-length = 120
indent-string = '    '

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "vaultops"
version = "1.2.0"
description = "Install Hashicorp Vault"
authors = ["arpan <arpan.rec@gmail.com>"]
license = "GLWTS"
readme = "README.md"
package-mode = true
packages = [{ include = "vaultops", from = "pylib" }]
scripts = { "vaultops" = "vaultops.__main__:main" }

[tool.poetry.dependencies]
python = "^3.10"
ansible = "10.6.0"
hvac = "2.3.0"
passlib = "1.7.4"
jmespath = "1.0.1"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
prettytable = "3.12.0"
python-terraform = "0.10.1"
pygithub = "2.5.0"
python-gnupg = "0.5.3"
boto3 = "1.35.59"
boto3-stubs = { extras = ["s3"], version = "1.35.59" } # extras = ["all"]

[tool.poetry.group.dev.dependencies]
mypy = "1.13.0"
pylint = "3.3.1"
ansible-lint = { version = "24.10.0", markers = 'platform_system != "Windows"' }
poetry-plugin-export = "1.8.0"
detect-secrets = "1.5.0"
types-pyyaml = "6.0.12.20240917"
types-requests = "2.32.0.20241016"
types-jmespath = "1.0.2.20240106"
ansible-dev-tools = "24.10.2"
pyright = "1.1.389"
isort = "5.13.2"
bandit = { extras = ["toml"], version = "1.7.10" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
